feat(condo): added timezone configuration

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3317,6 +3317,9 @@
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Resident Name",
   "timezone.msk": "MSK",
+  "timezone.utc": "UTC",
+  "timezone.cet": "CET",
+  "timezone.cest": "CEST",
   "tour.cardVideo.description.billing": "We tell you how to work with accruals and make sure that residents pay their receipts on time",
   "tour.cardVideo.description.default": "Learn how Doma helps management organizations",
   "tour.cardVideo.description.meter": "We tell you how management organizations and residents can work with meter readings on the Doma platform and in the mobile application",
