--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3317,6 +3317,9 @@
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Nombre del vecino",
   "timezone.msk": "Hora de Moscú",
+  "timezone.utc": "UTC",
+  "timezone.cet": "CET",
+  "timezone.cest": "CEST",
   "tour.cardVideo.description.billing": "Le contamos cómo trabajar con los cargos y asegurarnos de que los vecinos paguen sus facturas a tiempo",
   "tour.cardVideo.description.default": "Le contamos cómo Doma ayuda a las organizaciones gestoras",
   "tour.cardVideo.description.meter": "Contamos cómo las organizaciones de gestión y vecinos pueden trabajar con las lecturas de contadores en la plataforma y en la aplicación móvil",
