--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3317,6 +3317,9 @@
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Фио Жителя",
   "timezone.msk": "МСК",
+  "timezone.utc": "UTC",
+  "timezone.cet": "CET",
+  "timezone.cest": "CEST",
   "tour.cardVideo.description.billing": "Рассказываем, как работать с начислениями и сделать так, чтобы жители вовремя оплачивали квитанции",
   "tour.cardVideo.description.default": "Рассказываем, как Дома́ помогают управляющим организациям",
   "tour.cardVideo.description.meter": "Рассказываем, как управляющим организациям и жителям работать с показаниями счетчиков на платформе Doma.ai и в мобильном приложении",
