--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2460,6 +2460,7 @@
   "pages.condo.property.section.form.name.placeholder": "№ section",
   "pages.condo.property.section.form.numberOfSection": "Number of section",
   "pages.condo.property.section.form.unitsOnFloor": "Units on floor",
+  "pages.condo.property.section.form.parkingsOnFloor": "Parkings on floor",
   "pages.condo.property.select.option.floor": "Floor",
   "pages.condo.property.select.option.parking": "Parking",
   "pages.condo.property.select.option.parking.unit": "Parking Units",
