--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2459,6 +2459,7 @@
   "pages.condo.property.section.form.name.placeholder": "№ portal",
   "pages.condo.property.section.form.numberOfSection": "Número de portal",
   "pages.condo.property.section.form.unitsOnFloor": "Propiedades en piso",
+  "pages.condo.property.section.form.parkingsOnFloor": "Plazas en la planta",
   "pages.condo.property.select.option.floor": "Planta",
   "pages.condo.property.select.option.interfloorroom": "Unidad entre plantas",
   "pages.condo.property.select.option.parking": "Aparcamiento",
