--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2460,6 +2460,7 @@
   "pages.condo.property.section.form.name.placeholder": "№ подъезд",
   "pages.condo.property.section.form.numberOfSection": "Номер подъезда",
   "pages.condo.property.section.form.unitsOnFloor": "Помещений на этаже",
+  "pages.condo.property.section.form.parkingsOnFloor": "Мест на этаже",
   "pages.condo.property.select.option.floor": "Этаж",
   "pages.condo.property.select.option.parking": "Паркинг",
   "pages.condo.property.select.option.parking.unit": "Помещения паркинга",
