refactor(condo): DOMA-11237 refactor section form

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2336,6 +2336,8 @@
   "pages.condo.property.form.ConfirmDeleteMessage": "All data, related to this property, will be lost",
   "pages.condo.property.form.ConfirmDeleteTitle": "Delete property?",
   "pages.condo.property.form.DeleteLabel": "Delete property",
+  "pages.condo.property.form.EmptyResidents.header": "The residents list is currently empty",
+  "pages.condo.property.form.EmptyResidents.text": "Create one by uploading an Excel file of residents from this community",
   "pages.condo.property.form.NamePlaceholder": "For example, European",
   "pages.condo.property.form.ResidentsTabTitle": "Residents",
   "pages.condo.property.form.SuccessNotification": "Property {address} was added successfully",
@@ -2403,9 +2405,13 @@
   "pages.condo.property.menu.MenuPlaceholder": "Add element",
   "pages.condo.property.modal.RenameNextParking": "Rename the following parking in order",
   "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following units in order",
+  "pages.condo.property.modal.RenameNextParkingUnits.tooltip": "When new spots or units are added, the numbering of all parking spots and units will change",
   "pages.condo.property.modal.RenameNextSections": "Rename the following sections in order",
   "pages.condo.property.modal.RenameNextUnits": "Rename the following unit in order",
+  "pages.condo.property.modal.RenameNextUnits.tooltip": "When a new unit is added, the numbering of all units will change",
   "pages.condo.property.modal.UnitType": "Unit type",
+  "pages.condo.property.modal.SelectUnitsLabel": "Selected units: {count}",
+  "pages.condo.property.modal.SelectParkingUnitsLabel": "Selected parking units: {count}",
   "pages.condo.property.modal.title.addParking": "Add parking",
   "pages.condo.property.modal.title.addParkingFacilityUnit": "Add unit",
   "pages.condo.property.modal.title.addParkingFloor": "Add parking floor",
@@ -2459,9 +2465,10 @@
   "pages.condo.property.section.form.name": "Name",
   "pages.condo.property.section.form.name.placeholder": "№ section",
   "pages.condo.property.section.form.numberOfSection": "Number of section",
-  "pages.condo.property.section.form.unitsOnFloor": "Units on floor",
   "pages.condo.property.section.form.parkingsOnFloor": "Parkings on floor",
+  "pages.condo.property.section.form.unitsOnFloor": "Units on floor",
   "pages.condo.property.select.option.floor": "Floor",
+  "pages.condo.property.select.option.interfloorroom": "Interfloor unit",
   "pages.condo.property.select.option.parking": "Parking",
   "pages.condo.property.select.option.parking.unit": "Parking Units",
   "pages.condo.property.select.option.parkingFloor": "Parking floor",
