--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2409,11 +2409,14 @@
   "pages.condo.property.modal.RenameNextUnits": "Cambiar números de propiedades siguientes",
   "pages.condo.property.modal.UnitType": "Tipo de propiedad",
   "pages.condo.property.modal.title.addParking": "Añadir aparcamiento",
+  "pages.condo.property.modal.title.addParkingFacilityUnit": "Añadir unidad",
+  "pages.condo.property.modal.title.addParkingFloor": "Agregar piso de estacionamiento",
   "pages.condo.property.modal.title.addParkingUnit": "Añadir plaza de coche",
   "pages.condo.property.modal.title.addSection": "Añadir portal",
   "pages.condo.property.modal.title.addSectionFloor": "Añadir planta",
   "pages.condo.property.modal.title.addUnit": "Añadir unidad",
   "pages.condo.property.modal.title.editParking": "Editar aparcamiento",
+  "pages.condo.property.modal.title.editParkingFacilityUnit": "Editar unidad de estacionamiento",
   "pages.condo.property.modal.title.editParkingUnit": "Editar plaza de coche",
   "pages.condo.property.modal.title.editParkingUnits": "Editar",
   "pages.condo.property.modal.title.editSection": "Editar portal",
@@ -2458,11 +2461,12 @@
   "pages.condo.property.section.form.name": "Nombre",
   "pages.condo.property.section.form.name.placeholder": "№ portal",
   "pages.condo.property.section.form.numberOfSection": "Número de portal",
-  "pages.condo.property.section.form.unitsOnFloor": "Propiedades en piso",
   "pages.condo.property.section.form.parkingsOnFloor": "Plazas en la planta",
+  "pages.condo.property.section.form.unitsOnFloor": "Propiedades en piso",
   "pages.condo.property.select.option.floor": "Planta",
   "pages.condo.property.select.option.interfloorroom": "Unidad entre plantas",
   "pages.condo.property.select.option.parking": "Aparcamiento",
+  "pages.condo.property.select.option.parking.unit": "Unidades de estacionamiento",
   "pages.condo.property.select.option.parkingFloor": "Planta de aparcamiento",
   "pages.condo.property.select.option.parkingPlace": "Plaza de coche",
   "pages.condo.property.select.option.residentialBuilding": "Unidad residencial",
