--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1075,7 +1075,7 @@
   "field.UnitType.apartment": "Апартаменты",
   "field.UnitType.commercial": "Коммерческое помещение",
   "field.UnitType.flat": "Квартира",
-  "field.UnitType.parking": "Машиноместо",
+  "field.UnitType.parking": "Парковочное место",
   "field.UnitType.prefix.apartment": "АП",
   "field.UnitType.prefix.commercial": "КП",
   "field.UnitType.prefix.flat": "КВ",
@@ -2336,6 +2336,8 @@
   "pages.condo.property.form.ConfirmDeleteMessage": "Восстановить будет невозможно",
   "pages.condo.property.form.ConfirmDeleteTitle": "Удалить дом?",
   "pages.condo.property.form.DeleteLabel": "Удалить дом",
+  "pages.condo.property.form.EmptyResidents.header": "Список жителей пока пуст.",
+  "pages.condo.property.form.EmptyResidents.text": "Создайте, загрузив файл Excel с жителями этого сообщества",
   "pages.condo.property.form.NamePlaceholder": "Например, Европейский",
   "pages.condo.property.form.ResidentsTabTitle": "Жители",
   "pages.condo.property.form.SuccessNotification": "Дом по адресу {address} был успешно добавлен",
@@ -2402,20 +2404,24 @@
   "pages.condo.property.map.modal.totalContacts": "Зарегистрировано жителей",
   "pages.condo.property.menu.MenuPlaceholder": "Добавить элемент",
   "pages.condo.property.modal.RenameNextParking": "Изменить номера следующих паркингов",
-  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих помещений",
+  "pages.condo.property.modal.RenameNextParkingUnits": "Изменить номера следующих мест/помещений",
+  "pages.condo.property.modal.RenameNextParkingUnits.tooltip": "При добавлении новых мест или помещений изменится нумерация всех мест и помещений паркинга",
   "pages.condo.property.modal.RenameNextSections": "Изменить номера следующих подъездов",
   "pages.condo.property.modal.RenameNextUnits": "Изменить номера следующих помещений",
+  "pages.condo.property.modal.RenameNextUnits.tooltip": "При добавлении нового помещения изменится нумерация всех помещений",
   "pages.condo.property.modal.UnitType": "Тип помещения",
+  "pages.condo.property.modal.SelectUnitsLabel": "Выбрано помещений: {count}",
+  "pages.condo.property.modal.SelectParkingUnitsLabel": "Выбрано мест/помещений: {count}",
   "pages.condo.property.modal.title.addParking": "Добавить паркинг",
   "pages.condo.property.modal.title.addParkingFacilityUnit": "Добавить помещение",
   "pages.condo.property.modal.title.addParkingFloor": "Добавить этаж паркинга",
-  "pages.condo.property.modal.title.addParkingUnit": "Добавить машиноместо",
+  "pages.condo.property.modal.title.addParkingUnit": "Добавить парковочное место",
   "pages.condo.property.modal.title.addSection": "Добавить подъезд",
   "pages.condo.property.modal.title.addSectionFloor": "Добавить этаж",
   "pages.condo.property.modal.title.addUnit": "Добавить помещение",
   "pages.condo.property.modal.title.editParking": "Редактировать паркинг",
-  "pages.condo.property.modal.title.editParkingFacilityUnit": "Редактировать помещение паркинга",
-  "pages.condo.property.modal.title.editParkingUnit": "Редактировать машиноместо",
+  "pages.condo.property.modal.title.editParkingFacilityUnit": "Редактировать помещение",
+  "pages.condo.property.modal.title.editParkingUnit": "Редактировать парковочное место",
   "pages.condo.property.modal.title.editParkingUnits": "Редактировать",
   "pages.condo.property.modal.title.editSection": "Редактировать подъезд",
   "pages.condo.property.modal.title.editUnit": "Редактировать помещение",
@@ -2433,7 +2439,7 @@
   "pages.condo.property.parking.form.parkingOnFloor": "Машиномест на этаже",
   "pages.condo.property.parking.form.showMinFloor": "Задать минимальный этаж",
   "pages.condo.property.parkingSection.name": "Секция",
-  "pages.condo.property.parkingUnit.Name": "Номер машиноместа",
+  "pages.condo.property.parkingUnit.Name": "Номер места",
   "pages.condo.property.report.createReport.title": "Создать отчет",
   "pages.condo.property.report.dataUpdatedTitle": "Данные обновлены {updatedAt}",
   "pages.condo.property.report.importBankTransaction.description": "Есть два способа сделать это. Первый — загрузить файл из «1С». Второй — авторизоваться через Сбербанк Бизнес Онлайн (СББОЛ) и настроить автоматическую интеграцию.",
@@ -2459,13 +2465,14 @@
   "pages.condo.property.section.form.name": "Название",
   "pages.condo.property.section.form.name.placeholder": "№ подъезд",
   "pages.condo.property.section.form.numberOfSection": "Номер подъезда",
-  "pages.condo.property.section.form.unitsOnFloor": "Помещений на этаже",
   "pages.condo.property.section.form.parkingsOnFloor": "Мест на этаже",
+  "pages.condo.property.section.form.unitsOnFloor": "Помещений на этаже",
   "pages.condo.property.select.option.floor": "Этаж",
+  "pages.condo.property.select.option.interfloorroom": "Межэтажное помещение",
   "pages.condo.property.select.option.parking": "Паркинг",
   "pages.condo.property.select.option.parking.unit": "Помещения паркинга",
   "pages.condo.property.select.option.parkingFloor": "Этаж паркинга",
-  "pages.condo.property.select.option.parkingPlace": "Машиноместо",
+  "pages.condo.property.select.option.parkingPlace": "Парковочное место",
   "pages.condo.property.select.option.residentialBuilding": "Жилой дом",
   "pages.condo.property.select.option.section": "Подъезд",
   "pages.condo.property.select.option.unit": "Помещения дома",
@@ -2699,13 +2706,13 @@
   "pages.condo.ticket.field.unitType.apartment": "Апартаменты",
   "pages.condo.ticket.field.unitType.commercial": "Коммерческое помещение",
   "pages.condo.ticket.field.unitType.flat": "Квартира",
-  "pages.condo.ticket.field.unitType.parking": "Машиноместо",
-  "pages.condo.ticket.field.unitType.warehouse": "Кладовая",
+  "pages.condo.ticket.field.unitType.parking": "Парковочное место",
   "pages.condo.ticket.field.unitType.prefix.apartment": "АП",
   "pages.condo.ticket.field.unitType.prefix.commercial": "КП",
   "pages.condo.ticket.field.unitType.prefix.flat": "КВ",
   "pages.condo.ticket.field.unitType.prefix.parking": "ММ",
   "pages.condo.ticket.field.unitType.prefix.warehouse": "КЛ",
+  "pages.condo.ticket.field.unitType.warehouse": "Кладовая",
   "pages.condo.ticket.filters.Attribute": "Признак",
   "pages.condo.ticket.filters.Author": "Автор",
   "pages.condo.ticket.filters.ClientPhone": "Телефон заявителя",
@@ -3306,7 +3313,7 @@
   "ticketBlankExport.address.unitType.apartment": "апартаменты",
   "ticketBlankExport.address.unitType.commercial": "коммерческое помещение",
   "ticketBlankExport.address.unitType.flat": "квартира",
-  "ticketBlankExport.address.unitType.parking": "машиноместо",
+  "ticketBlankExport.address.unitType.parking": "Парковочное место",
   "ticketBlankExport.address.unitType.warehouse": "кладовая",
   "ticketBlankExport.field.clientFullName": "ФИО принимающей стороны",
   "ticketBlankExport.field.clientSignature": "Подпись принимающей стороны",
