fix(condo): DOMA-11237 fix translations in section form

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2434,7 +2434,7 @@
   "pages.condo.property.modal.unitType.warehouse": "Кладовая комната",
   "pages.condo.property.parking.form.floorCount": "Количество этажей",
   "pages.condo.property.parking.form.hideMinFloor": "Скрыть минимальный этаж",
-  "pages.condo.property.parking.form.mode.copy": "Дублировать Паркинг",
+  "pages.condo.property.parking.form.mode.copy": "Дублировать паркинг",
   "pages.condo.property.parking.form.numberOfParkingSection": "Номер паркинга",
   "pages.condo.property.parking.form.parkingOnFloor": "Машиномест на этаже",
   "pages.condo.property.parking.form.showMinFloor": "Задать минимальный этаж",
