fix(condo): DOMA-11237 update parking translations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1070,7 +1070,7 @@
   "field.UnitType.act.apartment": "Апартаментов",
   "field.UnitType.act.commercial": "Коммерческого помещения",
   "field.UnitType.act.flat": "Квартиры",
-  "field.UnitType.act.parking": "Машиноместа",
+  "field.UnitType.act.parking": "Парковочные места",
   "field.UnitType.act.warehouse": "Кладовой",
   "field.UnitType.apartment": "Апартаменты",
   "field.UnitType.commercial": "Коммерческое помещение",
@@ -1079,7 +1079,7 @@
   "field.UnitType.prefix.apartment": "АП",
   "field.UnitType.prefix.commercial": "КП",
   "field.UnitType.prefix.flat": "КВ",
-  "field.UnitType.prefix.parking": "ММ",
+  "field.UnitType.prefix.parking": "ПМ",
   "field.UnitType.prefix.warehouse": "КЛ",
   "field.UnitType.warehouse": "Кладовая",
   "field.email.requiredError": "Укажите email",
@@ -2436,7 +2436,7 @@
   "pages.condo.property.parking.form.hideMinFloor": "Скрыть минимальный этаж",
   "pages.condo.property.parking.form.mode.copy": "Дублировать паркинг",
   "pages.condo.property.parking.form.numberOfParkingSection": "Номер паркинга",
-  "pages.condo.property.parking.form.parkingOnFloor": "Машиномест на этаже",
+  "pages.condo.property.parking.form.parkingOnFloor": "Парковочных мест на этаже",
   "pages.condo.property.parking.form.showMinFloor": "Задать минимальный этаж",
   "pages.condo.property.parkingSection.name": "Секция",
   "pages.condo.property.parkingUnit.Name": "Номер места",
@@ -2710,7 +2710,7 @@
   "pages.condo.ticket.field.unitType.prefix.apartment": "АП",
   "pages.condo.ticket.field.unitType.prefix.commercial": "КП",
   "pages.condo.ticket.field.unitType.prefix.flat": "КВ",
-  "pages.condo.ticket.field.unitType.prefix.parking": "ММ",
+  "pages.condo.ticket.field.unitType.prefix.parking": "ПМ",
   "pages.condo.ticket.field.unitType.prefix.warehouse": "КЛ",
   "pages.condo.ticket.field.unitType.warehouse": "Кладовая",
   "pages.condo.ticket.filters.Attribute": "Признак",
