fix(condo): DOMA-11237 update translations

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2405,8 +2405,12 @@
   "pages.condo.property.menu.MenuPlaceholder": "Añadir elemento",
   "pages.condo.property.modal.RenameNextParking": "Cambiar números de aparcamientos siguientes",
   "pages.condo.property.modal.RenameNextParkingUnits": "Cambiar números de plazas de coches siguientes",
+  "pages.condo.property.modal.RenameNextParkingUnits.tooltip": "Al agregar nuevos lugares o unidades, cambiará la numeración de todos los lugares de estacionamiento y unidades.",
   "pages.condo.property.modal.RenameNextSections": "Cambiar números de portales siguientes",
   "pages.condo.property.modal.RenameNextUnits": "Cambiar números de propiedades siguientes",
+  "pages.condo.property.modal.RenameNextUnits.tooltip": "Cuando se agregue una nueva unidad, cambiará la numeración de todas las unidades",
+  "pages.condo.property.modal.SelectParkingUnitsLabel": "Unidades de estacionamiento seleccionadas: {count}",
+  "pages.condo.property.modal.SelectUnitsLabel": "Unidades seleccionadas: {count}",
   "pages.condo.property.modal.UnitType": "Tipo de propiedad",
   "pages.condo.property.modal.title.addParking": "Añadir aparcamiento",
   "pages.condo.property.modal.title.addParkingFacilityUnit": "Añadir unidad",
