fix(condo): DOMA-11237 remove log and update translations

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2336,8 +2336,8 @@
   "pages.condo.property.form.ConfirmDeleteMessage": "Восстановить будет невозможно",
   "pages.condo.property.form.ConfirmDeleteTitle": "Удалить дом?",
   "pages.condo.property.form.DeleteLabel": "Удалить дом",
-  "pages.condo.property.form.EmptyResidents.header": "Список жителей пока пуст.",
-  "pages.condo.property.form.EmptyResidents.text": "Создайте, загрузив файл Excel с жителями этого сообщества",
+  "pages.condo.property.form.EmptyResidents.header": "Список жителей пока пуст",
+  "pages.condo.property.form.EmptyResidents.text": "Создайте его, загрузив Excel-реестр жителей этого дома",
   "pages.condo.property.form.NamePlaceholder": "Например, Европейский",
   "pages.condo.property.form.ResidentsTabTitle": "Жители",
   "pages.condo.property.form.SuccessNotification": "Дом по адресу {address} был успешно добавлен",
@@ -3313,7 +3313,7 @@
   "ticketBlankExport.address.unitType.apartment": "апартаменты",
   "ticketBlankExport.address.unitType.commercial": "коммерческое помещение",
   "ticketBlankExport.address.unitType.flat": "квартира",
-  "ticketBlankExport.address.unitType.parking": "Парковочное место",
+  "ticketBlankExport.address.unitType.parking": "парковочное место",
   "ticketBlankExport.address.unitType.warehouse": "кладовая",
   "ticketBlankExport.field.clientFullName": "ФИО принимающей стороны",
   "ticketBlankExport.field.clientSignature": "Подпись принимающей стороны",
