--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2696,7 +2696,7 @@
   "pages.condo.ticket.field.unitType.commercial": "Local comercial",
   "pages.condo.ticket.field.unitType.flat": "Piso",
   "pages.condo.ticket.field.unitType.parking": "Plaza de coche",
-  "pages.condo.ticket.field.unitType.warehouse": "Trastero",
+  "pages.condo.ticket.field.unitType.warehouse": "Trasteros",
   "pages.condo.ticket.field.unitType.prefix.apartment": "Apartamento",
   "pages.condo.ticket.field.unitType.prefix.commercial": "Local comercial",
   "pages.condo.ticket.field.unitType.prefix.flat": "Piso",
