fix(condo): DOMA-11788 add action bars with selected items to meter and property meter pages

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1105,6 +1105,7 @@
   "form.prompt.title": "Do not save changes?",
   "global.Attach": "Attach",
   "global.Hints": "Hints",
+  "global.ImpossibleToRestore": "It would be impossible to restore",
   "global.actualUntil": "Actual until",
   "global.available": "Available",
   "global.bankAccount": "Bank account",
@@ -2096,6 +2097,7 @@
   "pages.condo.marketplace.title": "Marketplace",
   "pages.condo.marketplace.transitBankAccountErrorMessage": "We can't use transit (409) account. For the correct transfer operations, specify other bank account",
   "pages.condo.meter.Account": "Account",
+  "pages.condo.meter.ConfirmDeleteManyTitle": "Delete meters?",
   "pages.condo.meter.AccountNumber": "Account number",
   "pages.condo.meter.AccountNumberIsExistInOtherUnit": "Same account number is exist in other unit",
   "pages.condo.meter.AddAccount": "Add account",
