--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1104,6 +1104,7 @@
   "form.prompt.message": "Изменения не сохранятся, если вы уйдете со страницы.",
   "form.prompt.title": "Не сохранять изменения?",
   "global.Attach": "Прикрепить",
+  "global.ImpossibleToRestore": "Восстановить будет невозможно",
   "global.Hints": "Справки",
   "global.actualUntil": "Актуально до",
   "global.available": "Есть",
@@ -2096,6 +2097,7 @@
   "pages.condo.marketplace.title": "Маркетплейс",
   "pages.condo.marketplace.transitBankAccountErrorMessage": "Вы указали транзитный 409 счет. Для корректной работы реестрового обмена укажите другие платежные реквизиты",
   "pages.condo.meter.Account": "Лицевой счет",
+  "pages.condo.meter.ConfirmDeleteManyTitle": "Удалить приборы?",
   "pages.condo.meter.AccountNumber": "Номер лицевого счета",
   "pages.condo.meter.AccountNumberIsExistInOtherUnit": "Такой лицевой счет уже есть в другой квартире",
   "pages.condo.meter.AddAccount": "Добавить лицевой счет",
