--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3542,5 +3542,10 @@
   "tour.viewGuide": "Смотреть гайд",
   "trial.startPeriod": "Начать пробный период",
   "trial.subTitle": "А после...",
-  "trial.title": "Бесплатный период 14 дней"
+  "trial.title": "Бесплатный период 14 дней",
+  "ai.inputNotification.ready": "Готово",
+  "ai.inputNotification.failedToGenerate": "Не удалось сгенерировать ответ",
+  "ai.inputNotification.apply": "Применить",
+  "ai.inputNotification.anotherVariant": "Еще вариант",
+  "ai.updateText": "Улучшить ответ"
 }
