--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3546,5 +3546,7 @@
   "ai.inputNotification.failedToGenerate": "No se pudo generar una respuesta",
   "ai.inputNotification.apply": "Aplicar",
   "ai.inputNotification.anotherVariant": "Otra variante",
-  "ai.updateText": "Mejorar la respuesta"
+  "ai.updateText": "Mejorar la respuesta",
+  "ai.updateText.tour.title": "✨ Mejora tu respuesta con IA",
+  "ai.updateText.tour.message": "Ayuda a reformular tu mensaje para que sea más educado y claro ✌\uFE0F"
 }
