fix(condo): DOMA-11661 add translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -54,7 +54,8 @@
   "Comments.tab.organization.prompt.title": "There are no internal comments yet",
   "Comments.tab.resident": "With resident",
   "Comments.tab.resident.prompt.description": "You can leave comments for a resident - he will see them in the resident's mobile application",
-  "Comments.tab.resident.prompt.title": "There are no comments yet for a resident",
+  "Comments.tab.resident.ai.prompt.description": "You can generate the first one using AI. Residents will see it in the mobile app.",
+  "Comments.tab.resident.prompt.title": "No comments for residents yet",
   "Comments.title": "Comments",
   "Comments.user.deleted": "Deleted user",
   "CompanyName": "Domá",
@@ -100,6 +101,8 @@
   "DebtOverpayment": "Debt/Overpayment",
   "Delete": "Delete",
   "Deleted": "Deleted",
+  "Copy": "Copy",
+  "Copied": "Copied",
   "DeletedEmployee": "Deleted employee",
   "DepositedDate": "Payment date",
   "Description": "Description",
