--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -54,7 +54,8 @@
   "Comments.tab.organization.prompt.title": "No hay comentarios internos todavía",
   "Comments.tab.resident": "Con propietario",
   "Comments.tab.resident.prompt.description": "Puedes dejar comentarios para el propietario. Los verá en su aplicación móvil",
-  "Comments.tab.resident.prompt.title": "Aún no hay comentarios para el propietario",
+  "Comments.tab.resident.ai.prompt.description": "Puedes generar el primero usando IA. Los residentes lo verán en la aplicación móvil.",
+  "Comments.tab.resident.prompt.title": "Aún no hay comentarios para los residentes",
   "Comments.title": "Comentarios",
   "Comments.user.deleted": "Usuario eliminado",
   "CompanyName": "Doma",
@@ -100,6 +101,8 @@
   "DebtOverpayment": "Deuda/Sobrepago",
   "Delete": "Eliminar",
   "Deleted": "Eliminado",
+  "Copy": "Copiar",
+  "Copied": "Copiado",
   "DeletedEmployee": "Empleado eliminado",
   "DepositedDate": "Fecha de pago",
   "Description": "Descripción",
