--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -54,7 +54,8 @@
   "Comments.tab.organization.prompt.title": "Пока нет ни одного внутреннего комментария",
   "Comments.tab.resident": "С жителем",
   "Comments.tab.resident.prompt.description": "Можно оставлять комментарии для жителя — он увидит их в мобильном приложении жителя",
-  "Comments.tab.resident.prompt.title": "Пока нет ни одного комментария для жителя",
+  "Comments.tab.resident.ai.prompt.description": "Вы можете сгенерировать первый с помощью нейросети. Жители увидят его в мобильном приложении.",
+  "Comments.tab.resident.prompt.title": "Пока для жителей нет комментариев",
   "Comments.title": "Комментарии",
   "Comments.user.deleted": "Удалённый пользователь",
   "CompanyName": "Домá",
@@ -100,6 +101,8 @@
   "DebtOverpayment": "Долг/Переплата",
   "Delete": "Удалить",
   "Deleted": "Удалено",
+  "Copy": "Скопировать",
+  "Copied": "Скопировано",
   "DeletedEmployee": "Удаленный сотрудник",
   "DepositedDate": "Дата оплаты",
   "Description": "Описание",
