feat(condo): DOMA-11937 added address select when no contacts found on phone page

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1804,7 +1804,9 @@
   "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "pages.billing.registry.uploadPage.title": "Registry upload",
   "pages.clientCard.Title": "Contact {phone}",
-  "pages.clientCard.addAddress": "Add address",
+  "pages.clientCard.addAddress": "Add resident address",
+  "pages.clientCard.emptyClientContent.description": "This contact doesn't have an address yet, but you can check for it on the platform",
+  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Enter address for search",
   "pages.clientCard.callRecordsLog": "Call records log",
   "pages.clientCard.editContact": "Edit contact",
   "pages.clientCard.lastTicketsLoaded": "Last {count} tickets loaded.",
