--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1804,7 +1804,9 @@
   "pages.billing.Status.success.title": "Pagos de personas físicas conectados",
   "pages.billing.registry.uploadPage.title": "Carga del registro",
   "pages.clientCard.Title": "Número de teléfono {phone}",
-  "pages.clientCard.addAddress": "Añadir dirección",
+  "pages.clientCard.addAddress": "Add resident address",
+  "pages.clientCard.emptyClientContent.description": "This contact doesn't have an address yet, but you can check for it on the platform",
+  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Enter address for search",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
   "pages.clientCard.editContact": "Editar contacto",
   "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
