--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1804,7 +1804,9 @@
   "pages.billing.Status.success.title": "Платежи от физлиц подключены",
   "pages.billing.registry.uploadPage.title": "Загрузка нового реестра",
   "pages.clientCard.Title": "Контакт {phone}",
-  "pages.clientCard.addAddress": "Добавить адрес",
+  "pages.clientCard.addAddress": "Добавить адрес жителя",
+  "pages.clientCard.emptyClientContent.description": "У этого контакта еще нет адреса, но вы можете проверить его наличие на платформе",
+  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Введите адрес для поиска",
   "pages.clientCard.callRecordsLog": "История звонков",
   "pages.clientCard.editContact": "Редактировать контакт",
   "pages.clientCard.lastTicketsLoaded": "Загружены последние {count} заявок.",
