feat(condo): DOMA-11937 change button in not found content

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -230,8 +230,8 @@
   "SberIdRegister": "Register via Sber ID",
   "SearchByPhoneNumber": "Search by phone number",
   "SearchByPhoneNumber.modal.select.employees": "Employees",
-  "SearchByPhoneNumber.modal.select.notFoundContent": "No such contact was found",
-  "SearchByPhoneNumber.modal.select.notFoundContent.createContact": "Add a resident's address",
+  "SearchByPhoneNumber.modal.select.notFoundContent": "Phone not found",
+  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Open client card",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Create ticket",
   "SearchByPhoneNumber.modal.select.notResidents": "Not residents",
   "SearchByPhoneNumber.modal.select.residents": "Residents",
