--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -230,8 +230,8 @@
   "SberIdRegister": "Registro a través de Verde ID",
   "SearchByPhoneNumber": "Buscar por número de teléfono",
   "SearchByPhoneNumber.modal.select.employees": "Empleados",
-  "SearchByPhoneNumber.modal.select.notFoundContent": "No se ha encontrado contacto indicado",
-  "SearchByPhoneNumber.modal.select.notFoundContent.createContact": "Añadir la dirección del vecino",
+  "SearchByPhoneNumber.modal.select.notFoundContent": "Phone not found",
+  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Open client card",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Reportar nueva incidencia",
   "SearchByPhoneNumber.modal.select.notResidents": "No vecinos",
   "SearchByPhoneNumber.modal.select.residents": "Vecinos",
