--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -230,8 +230,8 @@
   "SberIdRegister": "Регистрация через Сбер ID",
   "SearchByPhoneNumber": "Поиск по номеру телефона",
   "SearchByPhoneNumber.modal.select.employees": "Сотрудники",
-  "SearchByPhoneNumber.modal.select.notFoundContent": "Такой контакт не найден",
-  "SearchByPhoneNumber.modal.select.notFoundContent.createContact": "Добавить адрес жителя",
+  "SearchByPhoneNumber.modal.select.notFoundContent": "Номер не найден",
+  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Открыть карточку контакта",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Создать заявку",
   "SearchByPhoneNumber.modal.select.notResidents": "Не жители",
   "SearchByPhoneNumber.modal.select.residents": "Жители",
