feat(condo): DOMA-11937 fixes in client card

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -231,8 +231,8 @@
   "SearchByPhoneNumber": "Buscar por número de teléfono",
   "SearchByPhoneNumber.modal.select.employees": "Empleados",
   "SearchByPhoneNumber.modal.select.notFoundContent": "Phone not found",
-  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Open client card",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Reportar nueva incidencia",
+  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Open client card",
   "SearchByPhoneNumber.modal.select.notResidents": "No vecinos",
   "SearchByPhoneNumber.modal.select.residents": "Vecinos",
   "Seconds": "Segundos",
@@ -1805,12 +1805,13 @@
   "pages.billing.registry.uploadPage.title": "Carga del registro",
   "pages.clientCard.Title": "Número de teléfono {phone}",
   "pages.clientCard.addAddress": "Add resident address",
-  "pages.clientCard.emptyClientContent.description": "This contact doesn't have an address yet, but you can check for it on the platform",
-  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Enter address for search",
   "pages.clientCard.callRecordsLog": "Historia de llamadas",
   "pages.clientCard.editContact": "Editar contacto",
+  "pages.clientCard.emptyClientContent.description": "This contact doesn't have an address yet, but you can check for it on the platform",
+  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Enter address for search",
   "pages.clientCard.lastTicketsLoaded": "Se cargaron los últimos {count} tickets.",
   "pages.clientCard.openAllTickets": "Ver todos los tickets",
+  "pages.clientCard.searchByAddress": "Search by address",
   "pages.clientCard.showAllPropertyTickets": "Todas incidencias de esta comunidad",
   "pages.clientCard.table.tabs.contactPropertyTickets": "Solicitud de entradas para esta dirección",
   "pages.clientCard.table.tabs.residentsEntranceTickets": "Solicitud de entradas para la entrada",
