--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -231,8 +231,8 @@
   "SearchByPhoneNumber": "Поиск по номеру телефона",
   "SearchByPhoneNumber.modal.select.employees": "Сотрудники",
   "SearchByPhoneNumber.modal.select.notFoundContent": "Номер не найден",
-  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Открыть карточку контакта",
   "SearchByPhoneNumber.modal.select.notFoundContent.createTicket": "Создать заявку",
+  "SearchByPhoneNumber.modal.select.notFoundContent.openClientCard": "Открыть карточку контакта",
   "SearchByPhoneNumber.modal.select.notResidents": "Не жители",
   "SearchByPhoneNumber.modal.select.residents": "Жители",
   "Seconds": "Секунд",
@@ -1805,12 +1805,13 @@
   "pages.billing.registry.uploadPage.title": "Загрузка нового реестра",
   "pages.clientCard.Title": "Контакт {phone}",
   "pages.clientCard.addAddress": "Добавить адрес жителя",
-  "pages.clientCard.emptyClientContent.description": "У этого контакта еще нет адреса, но вы можете проверить его наличие на платформе",
-  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Введите адрес для поиска",
   "pages.clientCard.callRecordsLog": "История звонков",
   "pages.clientCard.editContact": "Редактировать контакт",
+  "pages.clientCard.emptyClientContent.description": "У этого контакта еще нет адреса, но вы можете проверить его наличие на платформе",
+  "pages.clientCard.emptyClientContent.propertySelect.placeholder": "Введите адрес для поиска",
   "pages.clientCard.lastTicketsLoaded": "Загружены последние {count} заявок.",
   "pages.clientCard.openAllTickets": "Открыть все заявки",
+  "pages.clientCard.searchByAddress": "Поиск по адресу",
   "pages.clientCard.showAllPropertyTickets": "Все заявки по этому адресу",
   "pages.clientCard.table.tabs.contactPropertyTickets": "Заявки контакта по адресу",
   "pages.clientCard.table.tabs.residentsEntranceTickets": "Заявки жителей по подъезду",
