fix(condo): DOMA-11661 review fixes

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -3545,7 +3545,7 @@
   "trial.startPeriod": "Начать пробный период",
   "trial.subTitle": "А после...",
   "trial.title": "Бесплатный период 14 дней",
-  "ai.inputNotification.ready": "Готово",
+  "ai.inputNotification.ready": "Готово!",
   "ai.inputNotification.failedToGenerate": "Не удалось сгенерировать ответ",
   "ai.inputNotification.apply": "Применить",
   "ai.inputNotification.anotherVariant": "Еще вариант",
