--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -3545,7 +3545,7 @@
   "trial.startPeriod": "Start trial period",
   "trial.subTitle": "And then...",
   "trial.title": "Free period of 14 days",
-  "ai.inputNotification.ready": "Ready",
+  "ai.inputNotification.ready": "Ready!",
   "ai.inputNotification.failedToGenerate": "Failed to generate response",
   "ai.inputNotification.apply": "Apply",
   "ai.inputNotification.anotherVariant": "Another variant",
