--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -3545,7 +3545,7 @@
   "trial.startPeriod": "Empezar período de prueba",
   "trial.subTitle": "Y después...",
   "trial.title": "Periodo gratuito de 14 días",
-  "ai.inputNotification.ready": "Listo",
+  "ai.inputNotification.ready": "Listo!",
   "ai.inputNotification.failedToGenerate": "No se pudo generar una respuesta",
   "ai.inputNotification.apply": "Aplicar",
   "ai.inputNotification.anotherVariant": "Otra variante",
