--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2442,6 +2442,7 @@
   "pages.condo.property.index.TableField.TasksInWorkCount": "Tickets in work",
   "pages.condo.property.index.TableField.Technicians": "Technicians",
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Uninhabited units",
+  "pages.condo.property.index.SelectSectionsLabel": "Selected sections: {count}",
   "pages.condo.property.index.TableField.UnitsCount": "Flats",
   "pages.condo.property.index.UpdatePropertyTitle": "Update",
   "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Previously, the period was selected for all houses. It can be changed in the «Meter reporting period» section after the creation of the house.",
