--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2442,6 +2442,7 @@
   "pages.condo.property.index.TableField.TasksInWorkCount": "Incidencias en curso",
   "pages.condo.property.index.TableField.Technicians": "Técnicos",
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Unidades no residenciales",
+  "pages.condo.property.index.SelectSectionsLabel": "Selección de secciones: {count}",
   "pages.condo.property.index.TableField.UnitsCount": "Pisos",
   "pages.condo.property.index.UpdatePropertyTitle": "Editar comunidad",
   "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Anteriormente, el período fue elegido para todas las casas. Puedes cambiarlo en la sección «Período de declaración» después de crear la casa.",
