--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2460,6 +2460,8 @@
   "pages.condo.property.modal.RenameNextSections": "Изменить номера следующих подъездов",
   "pages.condo.property.modal.RenameNextUnits": "Изменить номера следующих помещений",
   "pages.condo.property.modal.RenameNextUnits.tooltip": "При добавлении нового помещения изменится нумерация всех помещений",
+  "pages.condo.property.modal.sections.RenameNextUnits.tooltip": "При добавлении нового помещения изменится нумерация помещений во всех следующих подъездах дома",
+  "pages.condo.property.modal.sections.RenameNextSections.tooltip": "При изменении номера подъезда изменится нумерация во всех следующих подъездах",
   "pages.condo.property.modal.SelectParkingUnitsLabel": "Выбрано мест/помещений: {count}",
   "pages.condo.property.modal.SelectUnitsLabel": "Выбрано помещений: {count}",
   "pages.condo.property.modal.UnitType": "Тип помещения",
