fix(condo): DOMA-12096 fixed after review

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1740,7 +1740,7 @@
   "pages.auth.register.info.dataProcessingContent": "el procesamiento de datos",
   "pages.auth.register.info.termsOfService": "servicio",
   "pages.auth.register.info.termsOfUseContent": "los términos de uso",
-  "pages.auth.register.step.inputPhone.title": "Registración",
+  "pages.auth.register.step.inputIdentifier.title": "Registración",
   "pages.auth.register.step.register.title": "Registro",
   "pages.auth.register.step.register.title.createPassword": "Crea una contraseña",
   "pages.auth.register.step.validatePhone.title": "Código de verificación",
@@ -1749,7 +1749,6 @@
   "pages.auth.reset.CheckPhone": "Comprueba SMS",
   "pages.auth.reset.CreateNewPasswordMsg": "Crea una nueva contraseña",
   "pages.auth.reset.RegisterHelp": "Tras introducir tu número de teléfono, recibirás automáticamente un código SMS. Esto es necesario para la seguridad de CRM.",
-  "pages.auth.reset.ResetHelp": "Introduce tu número de teléfono para recibir un código para recuperar el acceso a tu cuenta",
   "pages.auth.reset.ResetHelp.email": "Escribe tu correo electrónico para recibir un código y recuperar el acceso a tu cuenta",
   "pages.auth.reset.ResetHelp.phone": "Escriba su número de teléfono para recibir un código y restaurar el acceso a su cuenta",
   "pages.auth.reset.ResetHelp.phoneOrEmail": "Escriba su número de teléfono o correo electrónico para recibir un código para restaurar el acceso a su cuenta",
