--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1159,7 +1159,7 @@
   "global.input.error.wrongEmails": "Неверный формат E-mail адресов",
   "global.input.error.wrongMobilePhone": "Не соответствует формату +7 (XXX) XXX-XX-XX или это не мобильный телефон",
   "global.input.error.wrongPhone": "Не соответствует формату +7 (XXX) XXX-XX-XX",
-  "global.input.error.wrongPhoneOrEmail": "Не соответствует формату +7 (XXX) XXX-XX-XX или E-mail адресов",
+  "global.input.error.wrongPhoneOrEmail": "Не соответствует формату +7 (XXX) XXX-XX-XX или e‑mail",
   "global.later": "Позже",
   "global.noPageViewPermission": "У вас нет прав для просмотра данной страницы",
   "global.notAvailable": "Отсутствует",
@@ -1740,7 +1740,7 @@
   "pages.auth.register.info.dataProcessingContent": "обработкой данных",
   "pages.auth.register.info.termsOfService": "обслуживания",
   "pages.auth.register.info.termsOfUseContent": "условиями использования",
-  "pages.auth.register.step.inputPhone.title": "Зарегистрироваться",
+  "pages.auth.register.step.inputIdentifier.title": "Зарегистрироваться",
   "pages.auth.register.step.register.title": "Регистрация",
   "pages.auth.register.step.register.title.createPassword": "Придумайте пароль",
   "pages.auth.register.step.validatePhone.title": "Подтвердите номер",
@@ -1749,7 +1749,6 @@
   "pages.auth.reset.CheckPhone": "Проверьте СМС",
   "pages.auth.reset.CreateNewPasswordMsg": "Придумайте новый пароль",
   "pages.auth.reset.RegisterHelp": "После ввода номера телефона вам автоматически придёт СМС-код. Это нужно для обеспечения безопасности CRM.",
-  "pages.auth.reset.ResetHelp": "Введите свой номер телефона, чтобы получить код для восстановления доступа к вашей учетной записи",
   "pages.auth.reset.ResetHelp.email": "Введите e-mail, чтобы получить код для восстановления доступа к вашей учётной записи",
   "pages.auth.reset.ResetHelp.phone": "Введите номер телефона, чтобы получить код для восстановления доступа к вашей учётной записи",
   "pages.auth.reset.ResetHelp.phoneOrEmail": "Введите номер телефона или e-mail, чтобы получить код для восстановления доступа к вашей учётной записи",
