--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1740,7 +1740,7 @@
   "pages.auth.register.info.dataProcessingContent": "data processing",
   "pages.auth.register.info.termsOfService": "Terms of Service",
   "pages.auth.register.info.termsOfUseContent": "the terms of use",
-  "pages.auth.register.step.inputPhone.title": "Registration",
+  "pages.auth.register.step.inputIdentifier.title": "Registration",
   "pages.auth.register.step.register.title": "Registration",
   "pages.auth.register.step.register.title.createPassword": "Create a password",
   "pages.auth.register.step.validatePhone.title": "Verification code",
@@ -1749,7 +1749,6 @@
   "pages.auth.reset.CheckPhone": "Check your SMS",
   "pages.auth.reset.CreateNewPasswordMsg": "Type new password",
   "pages.auth.reset.RegisterHelp": "You need to confirm your phone number. After you type it, we will send you sms with a validation code",
-  "pages.auth.reset.ResetHelp": "Enter your phone number to receive a code to regain access to your account",
   "pages.auth.reset.ResetHelp.email": "Type your e-mail to receive a code to restore access to your account",
   "pages.auth.reset.ResetHelp.phone": "Type your phone number to receive a code to restore access to your account",
   "pages.auth.reset.ResetHelp.phoneOrEmail": "Type your phone number or e-mail to receive a code to restore access to your account",
