feat(condo): DOMA-12145 new user profile page

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -345,12 +345,12 @@
   "ai.generateComment.tourStepTitle": "✨ Comienza a chatear con AI",
   "ai.generateResponse": "Generar respuesta",
   "ai.generateResponseWithAI": "Generar respuestas mediante IA",
+  "ai.improveText": "Mejorar el texto",
   "ai.inputNotification.anotherVariant": "Otra variante",
   "ai.inputNotification.apply": "Aplicar",
   "ai.inputNotification.failedToGenerate": "No se pudo generar una respuesta",
   "ai.inputNotification.ready": "Listo!",
   "ai.updateText": "Mejorar la respuesta",
-  "ai.improveText": "Mejorar el texto",
   "ai.updateText.tour.message": "Ayuda a reformular tu mensaje para que sea más educado y claro ✌️",
   "ai.updateText.tour.title": "✨ Mejora tu respuesta con IA",
   "api.acquiring.exportPaymentsToExcel.NOTHING_TO_EXPORT": "No se han encontrado pagos para exportar",
@@ -2345,6 +2345,8 @@
   "pages.condo.profile.employeeTelegramBot.title": "Telegram-bot para incidencias",
   "pages.condo.profile.globalHints": "Sugerencias en secciones",
   "pages.condo.profile.interfaceLanguage": "Idioma de interfaz",
+  "pages.condo.profile.tabs.info": "Información",
+  "pages.condo.profile.tabs.settings": "Configuración",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoDescription": "Vamos a mostrar cómo crear plano del edificio utilizando un ejemplo",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoTitle": "Cómo trabajar con el plano del edificio en Doma",
   "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "Está en la esquina superior derecha.\nTodo lo demás es untuitivo 😊",
