--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -345,12 +345,12 @@
   "ai.generateComment.tourStepTitle": "✨ Start chatting with AI",
   "ai.generateResponse": "Generate response",
   "ai.generateResponseWithAI": "Generate responses with AI",
+  "ai.improveText": "Improve text",
   "ai.inputNotification.anotherVariant": "Another variant",
   "ai.inputNotification.apply": "Apply",
   "ai.inputNotification.failedToGenerate": "Failed to generate response",
   "ai.inputNotification.ready": "Ready!",
   "ai.updateText": "Improve answer",
-  "ai.improveText": "Improve text",
   "ai.updateText.tour.message": "Helps rephrase your message to be more polite and clear ✌️",
   "ai.updateText.tour.title": "✨ Improve your response with AI",
   "api.acquiring.exportPaymentsToExcel.NOTHING_TO_EXPORT": "No payments to export",
@@ -2345,6 +2345,8 @@
   "pages.condo.profile.employeeTelegramBot.title": "Telegram-bot for tickets",
   "pages.condo.profile.globalHints": "Hints in sections",
   "pages.condo.profile.interfaceLanguage": "Language",
+  "pages.condo.profile.tabs.info": "Info",
+  "pages.condo.profile.tabs.settings": "Settings",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoDescription": "On the example of how to create map",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoTitle": "How to work with map in Doma",
   "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "This is at upper right corner of the screen.\nThen everything is intuitive 😊",
