--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -345,12 +345,12 @@
   "ai.generateComment.tourStepTitle": "✨ Начните общение с помощью AI",
   "ai.generateResponse": "Сгенерировать ответ",
   "ai.generateResponseWithAI": "Генерируйте ответы с помощью нейросети",
+  "ai.improveText": "Улучшить текст",
   "ai.inputNotification.anotherVariant": "Еще вариант",
   "ai.inputNotification.apply": "Применить",
   "ai.inputNotification.failedToGenerate": "Не удалось сгенерировать ответ",
   "ai.inputNotification.ready": "Готово!",
   "ai.updateText": "Улучшить ответ",
-  "ai.improveText": "Улучшить текст",
   "ai.updateText.tour.message": "Поможет переформулировать сообщение более вежливо и понятно ✌️",
   "ai.updateText.tour.title": "✨Улучшайте ответ с помощью AI",
   "api.acquiring.exportPaymentsToExcel.NOTHING_TO_EXPORT": "Не найдены платежи для экспорта",
@@ -2345,6 +2345,8 @@
   "pages.condo.profile.employeeTelegramBot.title": "Telegram-бот заявок",
   "pages.condo.profile.globalHints": "Подсказки в разделах",
   "pages.condo.profile.interfaceLanguage": "Язык интерфейса",
+  "pages.condo.profile.tabs.info": "Информация",
+  "pages.condo.profile.tabs.settings": "Настройки",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoDescription": "На примере покажем, как создать шахматку",
   "pages.condo.property.EmptyBuildingBlock.edit.CardVideoTitle": "Как работать с шахматкой в Домах",
   "pages.condo.property.EmptyBuildingBlock.edit.EmptyBuildingDescription": "Она в верхнем правом углу.\nДальше — все интуитивно-понятно 😊",
