--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2344,6 +2344,8 @@
   "pages.condo.profile.employeeTelegramBot.open": "Abrir Telegram",
   "pages.condo.profile.employeeTelegramBot.title": "Telegram-bot para incidencias",
   "pages.condo.profile.globalHints": "Sugerencias en secciones",
+  "pages.condo.profile.hasMarketingConsent": "Acepto recibir materiales sobre gestión del hogar, descuentos y noticias de la plataforma {company}",
+  "pages.condo.profile.hasMarketingConsent.disabled.tooltip": "Para que podamos enviarle materiales útiles, proporcione su correo electrónico. Para ello, en la pestaña \"Información\", haga clic en \"Editar\" y añada su dirección de correo electrónico.",
   "pages.condo.profile.interfaceLanguage": "Idioma de interfaz",
   "pages.condo.profile.tabs.info": "Información",
   "pages.condo.profile.tabs.settings": "Configuración",
